# grpc-key-value-store

./: Dockerfile  README.md
client/: Cargo.toml  build.rs
client/src/: handlers.rs  main.rs  routes.rs
protos/: kvstore.proto
server/: Cargo.toml  build.rs
server/src/: main.rs
