[package]
name = "key-value-store-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.3"
tonic = "0.11.0"
lambda-extension = "0.10.0"
aws-types = "1.1.7"
log = "0.4"
warp = "0.3.6"
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3"

[build-dependencies]
tonic-build = "0.11.0"