[package]
name = "key-value-store-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.3"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.11.0"
redis = { version = "0.25.2", features = ["tls"] }
tokio-native-tls = "0.3.1"

[build-dependencies]
tonic-build = "0.11.0"
